Fix alignment on bars icon in header

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,13 +12,13 @@
     --border-rad-smaller: 0.5rem;
     --sidebar-large-padding: 1.5rem;
     --main-bg: #ededed; /*dialog bg: #8dabc5, dialog inputs: #658bac, dialog btn: #d76161, main bg old: #658bac, secondary bg old: #26547C*/ 
-    --secondary-bg-clr: #79b2ba87;
+    --secondary-bg-clr: #c7c7c787;
     --dark-text-clr: rgb(40, 40, 40);
     --light-text-clr: #eeeeee;
-    --button-clr-side-pane: #C1666B;
-    --button-clr-todo-pane: #C1666B;
+    --button-clr-side-pane: #669dc1;
+    --button-clr-todo-pane: #669dc1;
     --button-size: 10rem;
-    --header-clr: #48A9A6;
+    --header-clr: #C1666B;
     --placeholder-txt-clr: rgb(99, 99, 99);
     --list-card-clr: #79b2ba87;
     --todo-card-clr: rgba(226, 226, 226, 0.6);
@@ -59,6 +59,7 @@ header {
     padding: 0 2rem;
     background-color: var(--header-clr);
     display: flex;
+    align-items: center;
     gap: 2.5rem;
 }
 
@@ -97,8 +98,6 @@ header {
 
 .bars {
     font-size: 3rem;
-    padding-top: 0.5rem;
-    margin-bottom: var(--sidebar-large-padding);
 }
 
 .sidebar > .wrapper {
